hphp/test/zend7/Zend/tests/bug65784.php.expectf
string(9) "not catch"
NULL

Fatal error: %s
Stack trace:
#0 %sbug65784.php(52): foo3()
#1 {main}

Next Error: Class 'NotExists' not found in %sbug65784.php:46
Stack trace:
#0 %sbug65784.php(52): foo3()
#1 {main}
  thrown in %sbug65784.php on line 46